# sgg_v2

./: .gitignore  DETECTORS.md  pyproject.toml  results.json
examples/: detection_datamodule_usage.py  train_detector_example.py  transforms_demo.py  use_logger.py  vrd_dataset_example.py
scripts/: __init__.py  benchmark_detection.py  detector_trainer.py  precompute_sgg_features.py  precompute_word2vec.py  sgg_trainer.py  test_detector_consistency.py
src/data/: __init__.py  label_mapping.py  sgg_precomputed.py  transforms.py  vrd_detection.py
src/evaluation/: __init__.py  detection_metrics.py  sgg_metrics.py
src/modules/: __init__.py
src/modules/detection/: __init__.py  base.py  efficientdet.py  faster_rcnn.py
src/modules/sgg_heads/: __init__.py  base.py  bgnn.py  imp.py  nmp.py
src/trainer_lib/: __init__.py
src/trainer_lib/data_modules/: __init__.py  detection.py  sgg.py
src/trainer_lib/lightning_modules/: README.md  __init__.py  detector.py  sgg.py
src/trainer_lib/logging/: __init__.py  aim_logger.py
tests/data/: test_label_mapping.py  test_transforms.py  test_vrd_detection.py
tests/evaluation/: test_detection_metrics.py
tests/modules/: __init__.py
tests/modules/detection/: test_efficientdet.py  test_faster_rcnn.py  test_freeze.py  test_roi_pooling.py  test_structure.py
tests/test_scripts/: __init__.py  test_benchmark_detection.py  test_detector_trainer.py
tests/trainer_lib/: __init__.py  test_aim_logger.py  test_vrd_detection_datamodule.py
tests/trainer_lib/lightning_modules/: __init__.py  test_detector.py  test_detector_integration.py
(+11 files in other folders)
